<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_teleop</name>
  <version>1.0.0</version>
  <description>Custom teleoperation node using keyboard for TurtleBot3.</description>
  <maintainer email="t65599903@gmail.com">user</maintainer>
  <license>Apache 2.0</license>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
